adding the design system to the project code... fixing it for compilation in vue-loader

--- a/src/renderer/assets/app.scss
+++ b/src/renderer/assets/app.scss
@@ -1,3 +1,6 @@
+@import "css/settings/colors";
+@import "css/modals";
+
 #app {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -212,7 +215,7 @@ i.nuls-dark {
   display: inline-block;
   height: 0.8em;
   width: 0.5em;
-  background: url(./logo1.png);
+  background: url('assets/logo1.png');
   background-size: contain;
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -272,208 +275,6 @@ pre code {
   word-break: break-word;
   color: #2c7be5;
 }
-
-/* .card {
-  background: #fff;
-  margin-bottom: 1.5rem;
-  box-shadow: 0 .75rem 1.5rem rgba(18,36,62,.04);
-  border: 1px solid #edf2f9;
-  border-radius: .5rem;
-}
-
-.card-header {
-  background: #fff;
-  border-bottom: 1px solid #edf2f9;
-  display: flex;
-  flex-direction: row;
-  min-height: 3.75rem;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
-  flex-grow: 1;
-  align-items: center;
-}
-
-.card-header > * {
-  flex: 1 1;
-}
-
-.card-header h4 {
-  margin: 0;
-  display: inline;
-}
-
-.card-header:first-child {
-  border-radius: calc(.5rem - 1px) calc(.5rem - 1px) 0 0;
-} */
-/*
-.table
-{
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 1.5rem;
-
-    background-color: transparent;
-}
-.table th,
-.table td
-{
-    padding: .9375rem;
-
-    vertical-align: top;
-
-    border-top: 1px solid #edf2f9;
-}
-.table thead th
-{
-    vertical-align: bottom;
-
-    border-bottom: 2px solid #edf2f9;
-}
-.table tbody + tbody
-{
-    border-top: 2px solid #edf2f9;
-}
-.table .table
-{
-    background-color: #f9fbfd;
-}
-
-.table-sm th,
-.table-sm td
-{
-    padding: .9375rem;
-}
-
-.table-bordered
-{
-    border: 1px solid #edf2f9;
-}
-.table-bordered th,
-.table-bordered td
-{
-    border: 1px solid #edf2f9;
-}
-.table-bordered thead th,
-.table-bordered thead td
-{
-    border-bottom-width: 2px;
-}
-
-.table-borderless th,
-.table-borderless td,
-.table-borderless thead th,
-.table-borderless tbody + tbody
-{
-    border: 0;
-}
-
-.table-striped tbody tr:nth-of-type(odd)
-{
-    background-color: #f9fbfd;
-}
-
-.table-hover tbody tr:hover
-{
-    background-color: #f9fbfd;
-}
-
-.table-hover .table-light:hover
-{
-    background-color: #e8ecf6;
-}
-.table-hover .table-light:hover > td,
-.table-hover .table-light:hover > th
-{
-    background-color: #e8ecf6;
-}
-
-.table-hover .table-dark:hover
-{
-    background-color: #afb5be;
-}
-.table-hover .table-dark:hover > td,
-.table-hover .table-dark:hover > th
-{
-    background-color: #afb5be;
-}
-
-.table-hover .table-white:hover
-{
-    background-color: #f2f2f2;
-}
-.table-hover .table-white:hover > td,
-.table-hover .table-white:hover > th
-{
-    background-color: #f2f2f2;
-}
-
-.card-table
-{
-    margin-bottom: 0;
-}
-.card-table thead th
-{
-    border-top-width: 0;
-}
-.card-table thead th:first-child,
-.card-table tbody td:first-child
-{
-    padding-left: 1.5rem !important;
-}
-.card-table thead th:last-child,
-.card-table tbody td:last-child
-{
-    padding-right: 1.5rem !important;
-}
-
-.table thead th
-{
-    font-size: .8125rem;
-    font-weight: 600;
-
-    letter-spacing: .08em;
-    text-transform: uppercase;
-
-    color: #95aac9;
-    border-bottom-width: 1px;
-    background-color: #f9fbfd;
-}
-
-.table-sm
-{
-    font-size: .8125rem;
-}
-
-.table-sm thead th
-{
-    font-size: .625rem;
-}
-
-.table-nowrap th,
-.table-nowrap td
-{
-    white-space: nowrap;
-}
-
-.table [data-sort]::after
-{
-    margin-left: .25rem;
-
-    content: url('data:image/svg+xml;utf8,<svg width=\'6\' height=\'10\' viewBox=\'0 0 6 10\' fill=\'none\' xmlns=\'http://www.w3.org/2000/svg\'><path fill-rule=\'evenodd\' clip-rule=\'evenodd\' d=\'M3 0L6 4H0L3 0ZM3 10L0 6H6L3 10Z\' fill=\'%2395AAC9\'/></svg>');
-}
-
-.table-checkbox
-{
-    min-height: 0;
-}
-
-.table-checkbox .custom-control-label::before,
-.table-checkbox .custom-control-label::after
-{
-    top: 50%;
-
-    transform: translateY(-50%);
-} */
 
 .navbar-nav a.nav-link>.feather {
   min-width: 1.5em;
