--- a/src/renderer/assets/app.scss
+++ b/src/renderer/assets/app.scss
@@ -1,10 +1,129 @@
-@import "css/settings/colors";
 @import "css/modals";
+
+html {
+  font-size: 12px;
+}
 
 #app {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    background: $color-secondary-blue-004;
 }
+
+#app>header {
+  background: $color-secondary-blue-002;
+}
+
+header .app-header {
+  background: $color-secondary-blue-001;
+}
+
+header .app-selector {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+header .app-name {
+  vertical-align: middle;
+  padding: 1rem;
+}
+
+header .app-logo img {
+  height: 2rem;
+}
+
+.dropdown button {
+  background: $color-secondary-blue-003;
+  font-weight: bold;
+  border: 0;
+  border-radius: 0;
+  padding: 0.5rem 1.5rem;
+}
+
+.dropdown button:hover, .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
+  background: $color-secondary-blue-004;
+  box-shadow: 0 8px 24px 0 rgba(0,0,0,0.3);
+}
+
+.dropdown button::after {
+  margin-left: 1.5rem;
+}
+
+.dropdown-menu {
+  background: $color-secondary-blue-004;
+  box-shadow: 0 8px 24px 0 rgba(0,0,0,0.3);
+  color: $color-secondary-white;
+  border: 0;
+  border-radius: 0;
+  margin: 0;
+}
+
+h6.dropdown-header,
+.dropdown-item.first-level {
+  font-size: 1.35rem;
+  font-family: unquote(map-get($fonts, headings));
+  color: $color-secondary-white;
+}
+
+.dropdown-item {
+  color: $color-secondary-white;
+}
+
+.dropdown-item.active,
+.dropdown-item:hover,
+.dropdown-item:focus {
+  background-color: $color-secondary-blue-002;
+  color: $color-secondary-white;
+}
+
+
+.card {
+
+  background-color: $color-secondary-blue-002;
+  border: 0;
+  border-radius: 0;
+
+  &__inner {
+
+  }
+
+  &--content {
+    padding: 3rem;
+  }
+
+  .card-header {
+    background-color: $color-secondary-blue-003;
+    border: 0;
+    vertical-align: middle;
+
+    h4 {
+      margin: 0;
+      padding: 0;
+      font-size: 1rem;
+      font-weight: normal;
+    }
+  }
+}
+
+.card-raised {
+  box-shadow: 0 8px 24px 0 rgba(0,0,0,0.3);
+}
+
+.text-muted {
+  color: $color-shades-blue-10;
+}
+
+a {
+  color: $color-shades-green-70;
+}
+
+a:hover {
+  color: $color-shades-green-90;
+}
+
+
+
+
 
 .app-navbar {
   background: #fff;
@@ -60,96 +179,6 @@ text-align: center;
   word-break: break-all;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6
-{
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-
-    margin-bottom: 1.125rem;
-
-    color: inherit;
-}
-
-h1,
-.h1
-{
-    font-size: 1.625rem;
-}
-
-h2,
-.h2
-{
-    font-size: 1.25rem;
-}
-
-h3,
-.h3
-{
-    font-size: 1.0625rem;
-}
-
-h4,
-.h4
-{
-    font-size: .9375rem;
-}
-
-h5,
-.h5
-{
-    font-size: .8125rem;
-}
-
-h6,
-.h6
-{
-    font-size: .625rem;
-}
-
-h1,
-.h1
-{
-    font-size: 1.5rem;
-
-    margin-bottom: 1.125rem;
-}
-@media (min-width: 768px)
-{
-    h1,
-    .h1
-    {
-        font-size: 1.625rem;
-    }
-}
-
-h2,
-.h2
-{
-    margin-bottom: 1.125rem;
-}
-
-h3,
-.h3
-{
-    margin-bottom: .84375rem;
-}
-
-h4, .h4, h5, .h5, h6, .h6
-{
-    margin-bottom: .5625rem;
-}
 
 .mt--1 {
   margin-top: -.1875rem !important;
@@ -179,7 +208,7 @@ h4, .h4, h5, .h5, h6, .h6
     padding-bottom: 1.5rem;
 }
 
-.header-pretitle
+.header-pretitleapp-name
 {
     letter-spacing: .08em;
     text-transform: uppercase;
@@ -270,10 +299,11 @@ a.address, span.address {
   }
 }
 
-pre code {
+pre code,
+code {
   font-size: 87.5%;
   word-break: break-word;
-  color: #2c7be5;
+  color: $color-shades-green-90;
 }
 
 .navbar-nav a.nav-link>.feather {
