--- a/src/renderer/assets/app.scss
+++ b/src/renderer/assets/app.scss
@@ -1,4 +1,5 @@
 @import "css/modals";
+@import "css/dropdowns";
 
 html {
   font-size: 12px;
@@ -18,63 +19,26 @@ header .app-header {
   background: $color-secondary-blue-001;
 }
 
-header .app-selector {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 header .app-name {
   vertical-align: middle;
   padding: 1rem;
 }
 
+header .app-logo:hover {
+  color: #82bd39;
+}
+
 header .app-logo img {
   height: 2rem;
+  margin-right: -3px;
+  filter: grayscale(100%) contrast(1000%) brightness(1.0);
 }
 
-.dropdown button {
-  background: $color-secondary-blue-003;
-  font-weight: bold;
-  border: 0;
-  border-radius: 0;
-  padding: 0.5rem 1.5rem;
+header .app-logo:hover img {
+  filter: none;
 }
 
-.dropdown button:hover, .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
-  background: $color-secondary-blue-004;
-  box-shadow: 0 8px 24px 0 rgba(0,0,0,0.3);
-}
 
-.dropdown button::after {
-  margin-left: 1.5rem;
-}
-
-.dropdown-menu {
-  background: $color-secondary-blue-004;
-  box-shadow: 0 8px 24px 0 rgba(0,0,0,0.3);
-  color: $color-secondary-white;
-  border: 0;
-  border-radius: 0;
-  margin: 0;
-}
-
-h6.dropdown-header,
-.dropdown-item.first-level {
-  font-size: 1.35rem;
-  font-family: unquote(map-get($fonts, headings));
-  color: $color-secondary-white;
-}
-
-.dropdown-item {
-  color: $color-secondary-white;
-}
-
-.dropdown-item.active,
-.dropdown-item:hover,
-.dropdown-item:focus {
-  background-color: $color-secondary-blue-002;
-  color: $color-secondary-white;
-}
 
 
 .card {
@@ -248,11 +212,11 @@ i.nuls-dark {
   background-size: contain;
   background-position: center bottom;
   background-repeat: no-repeat;
-  filter: grayscale(100%) contrast(160%) brightness(0.1);
+  filter: grayscale(100%) contrast(1000%) brightness(1.0);
 }
 
 i.nuls-dark {
-  filter: none;
+filter: grayscale(100%) contrast(160%) brightness(0.1);
 }
 
 i.nuls:hover {
