--- a/src/renderer/assets/css/dropdowns.scss
+++ b/src/renderer/assets/css/dropdowns.scss
@@ -1,6 +1,6 @@
-.dropdown {
+.dropdown, .v-select {
   button.btn-primary, button.btn-secondary {
-    background: $color-secondary-blue-003;
+    background: $color-secondary-blue-003 !important;
     font-weight: bold;
     border: 0;
     border-radius: 0;
@@ -16,30 +16,41 @@
     margin-left: 1.5rem;
   }
 
+  &.v-select .dropdown-toggle:after {
+    display: none;
+  }
+  &.v-select.open .open-indicator:before {
+    margin-top: 10px;
+  }
+
   .dropdown-menu {
-    background: $color-secondary-blue-004;
+    background: $color-secondary-blue-004 !important;
     box-shadow: 0 8px 24px 0 rgba(0,0,0,0.3);
     color: $color-secondary-white;
     border: 0;
     border-radius: 0;
     margin: 0;
+
+    h6.dropdown-header,
+    .dropdown-item.first-level {
+      font-size: 1.35rem;
+      font-family: unquote(map-get($fonts, headings));
+      color: $color-secondary-white;
+    }
+
+    .dropdown-item, .dropdown-item a {
+      color: $color-secondary-white;
+    }
+
+    .dropdown-item.active,
+    .dropdown-item:hover,
+    .dropdown-item:focus,
+    .active > a,
+    .highlight > a {
+      background-color: $color-secondary-blue-002 !important;
+      color: $color-secondary-white !important;
+    }
   }
 
-  h6.dropdown-header,
-  .dropdown-item.first-level {
-    font-size: 1.35rem;
-    font-family: unquote(map-get($fonts, headings));
-    color: $color-secondary-white;
-  }
 
-  .dropdown-item {
-    color: $color-secondary-white;
-  }
-
-  .dropdown-item.active,
-  .dropdown-item:hover,
-  .dropdown-item:focus {
-    background-color: $color-secondary-blue-002;
-    color: $color-secondary-white;
-  }
 }
