--- a/src/renderer/assets/css/dropdowns.scss
+++ b/src/renderer/assets/css/dropdowns.scss
@@ -50,6 +50,10 @@
       background-color: $color-secondary-blue-002 !important;
       color: $color-secondary-white !important;
     }
+
+    .dropdown-divider {
+      border-color: $color-secondary-blue-003 !important;
+    }
   }
 
 
