--- a/src/renderer/assets/css/dropdowns.scss
+++ b/src/renderer/assets/css/dropdowns.scss
@@ -30,6 +30,7 @@
     border: 0;
     border-radius: 0;
     margin: 0;
+    min-width: 30rem;
 
     h6.dropdown-header,
     .dropdown-item.first-level {
