--- a/src/renderer/assets/css/dropdowns.scss
+++ b/src/renderer/assets/css/dropdowns.scss
@@ -23,6 +23,10 @@
     margin-top: 10px;
   }
 
+  &#mainnav .dropdown-menu {
+    min-width: 30rem;
+  }
+
   .dropdown-menu {
     background: $color-secondary-blue-004 !important;
     box-shadow: 0 8px 24px 0 rgba(0,0,0,0.3);
@@ -30,7 +34,6 @@
     border: 0;
     border-radius: 0;
     margin: 0;
-    min-width: 30rem;
 
     h6.dropdown-header,
     .dropdown-item.first-level {
