--- a/src/renderer/assets/design-system/00_global/styles/__settings/_bootstrap.scss
+++ b/src/renderer/assets/design-system/00_global/styles/__settings/_bootstrap.scss
@@ -52,6 +52,7 @@ $dropdown-border-width: 0;
 
 $custom-select-bg: #000;
 
+$btn-border-width: 0;
 $btn-border-radius: 0;
 $btn-border-radius-lg: 0;
 $btn-border-radius-sm: 0;
@@ -66,6 +67,14 @@ $input-focus-color: $white;
 $input-group-addon-bg: $color-secondary-blue-002;
 $input-disabled-bg: $color-secondary-blue-002;
 
+$custom-select-bg: $color-secondary-blue-003;
+$custom-select-border-radius: 0;
+$custom-select-border-width: 0;
+$custom-select-color: $white;
+$custom-select-indicator: str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='#{$white}' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e"), "#", "%23");
+$custom-select-background: $custom-select-indicator no-repeat right $custom-select-padding-x center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
+
+
 $input-color: $white;
 $list-group-border-radius: 0;
 $input-border-radius: 0;
@@ -73,6 +82,7 @@ $input-border-radius-sm: 0;
 $input-border-radius-lg: 0;
 $input-border-color: transparent;
 $input-border-width: 0;
+$input-border-width-lg: 0;
 $input-box-shadow: none;
 
 $popover-border-radius: 0;
