--- a/src/renderer/assets/css/dropdowns.scss
+++ b/src/renderer/assets/css/dropdowns.scss
@@ -55,6 +55,10 @@
       color: $color-secondary-white !important;
     }
 
+    .dropdown-item[aria-disabled=true] {
+      opacity: .5;
+    }
+
     .dropdown-divider {
       border-color: $color-secondary-blue-003 !important;
     }
