--- a/src/renderer/assets/design-system/00_global/styles/__settings/_bootstrap.scss
+++ b/src/renderer/assets/design-system/00_global/styles/__settings/_bootstrap.scss
@@ -99,3 +99,7 @@ $pagination-border-width: 0;
 $pagination-disabled-color: $color-shades-blue-40;
 $pagination-disabled-bg: $color-secondary-blue-003;
 $pagination-active-bg: $color-secondary-blue-002;
+
+$nav-pills-border-radius: 0;
+$nav-link-padding-y: 0;
+$nav-link-padding-x: 0;
