--- a/src/renderer/assets/design-system/04_organisms/nav/_nav.scss
+++ b/src/renderer/assets/design-system/04_organisms/nav/_nav.scss
@@ -56,7 +56,7 @@
 				&:not(.show) {
 					display: block;
 					max-height: 0;
-					transition: max-height .5s cubic-bezier(0, 1, 0, 1); 
+					transition: max-height .5s cubic-bezier(0, 1, 0, 1);
 				}
 			}
 		}
@@ -121,7 +121,7 @@
 
 		}
 
-	}	
+	}
 
 	& .navbar-subnav {
 
@@ -137,7 +137,7 @@
 		}
 
 		//max-height: 0;
-		//transition: max-height .5s cubic-bezier(0, 1, 0, 1); 
+		//transition: max-height .5s cubic-bezier(0, 1, 0, 1);
 		transition: opacity 0.25s ease-in-out;
 		overflow: hidden;
 		opacity: 0;
@@ -185,3 +185,13 @@
 	padding-top: 6.5rem;
 }
 
+.nav-pills {
+	.nav-link {
+		padding: .5rem 1rem;
+		font-size: 1.25rem;
+	}
+
+	.nav-link.active {
+		background: $color-secondary-blue-001;
+	}
+}
