--- a/src/renderer/assets/design-system/00_global/styles/_bootstrap.scss
+++ b/src/renderer/assets/design-system/00_global/styles/_bootstrap.scss
@@ -60,5 +60,6 @@
 @import "~bootstrap/scss/tooltip";
 @import "~bootstrap/scss/popover";
 @import "~bootstrap/scss/carousel";
+@import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/print";
