--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Nytro Wallet v0.9.2 (beta3)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
